SONARPY-1299 CR fixes